INT-20993 theme_snap: Fixed again the drawer display width to avoid overlapping the rest of the UI by style modification

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -1653,7 +1653,7 @@ footer #moodle-footer
     transition: all 0.4s 0s ease;
     // When admin block is open
     &.offcanvas {
-        left: -200px;
+        left: -315px;
     }
     &.show-drawer-right {
         left: -315px;
